@@ -1,3 +1,8 @@
+2000-04-10  Dan Winship  <danw@helixcode.com>
+
+	* providers/mbox/camel-mbox-folder.c (_get_message_by_number):
+	implement get_message_by_number for the mail fetch code.
+
 2000-04-09  Jeffrey Stedfast  <fejj@stampede.org>
 
 	* providers/smtp/camel-smtp-transport.c: reformatted to fit
